<resources>
    <string name="app_name">MobileDIY</string>
    <string name="app_preview">卡图预览</string>
    <string name="app_open_card">打开卡片</string>
    <string name="app_settings">设置</string>
    <string name="app_kana">注音</string>
    <string name="menu_preview">预览</string>
    <string name="menu_collect">卡片文件打包</string>
    <string name="menu_settings">设置</string>
    <string name="menu_save">保存</string>
    <string name="menu_kana_card">以卡片效果注音</string>
    <string name="menu_kana_text">以日语句子注音</string>
    <string name="str_loading">正在渲染卡图…</string>
    <string name="str_loadx5">正在加载 X5 内核，请稍候…</string>
    <string name="str_preparing">正在解压资源，请稍候…</string>
    <string name="str_preparing_hint">第一次启动时会花费较长时间，请耐心等待</string>
    <string name="str_language">语言</string>
    <string name="str_file">文件</string>
    <string name="str_image">卡图</string>
    <string name="str_name">卡名</string>
    <string name="str_new">新建</string>
    <string name="str_open">打开</string>
    <string name="str_save">保存</string>
    <string name="str_about">关于</string>
    <string name="str_exporting">正在导出卡图，请稍候…</string>
    <string name="str_export_image">已成功导出卡图</string>
    <string name="str_no_card">没有卡片，请先保存 DIY 作品</string>
    <string name="str_json_saved">卡片信息已保存.</string>
    <string name="str_no_kk_found">没有找到注音信息.</string>
    <string name="str_reinstall_server">重新安装数据</string>
    <string name="str_reinstall_server_desc">制卡数据出现问题或版本过旧时，使用此选项可以重新安装数据包</string>
    <string name="str_reinstall">重新安装</string>
    <string name="str_about_app">关于手机制卡器 3.3.3</string>
    <string name="str_about_app_desc">查看制卡器相关信息，开源协议等</string>
    <string name="str_confirm">确认</string>
    <string name="str_ok">确认</string>
    <string name="str_cancel">取消</string>
    <string name="str_confirm_reinstall">确定要重新安装制卡器数据吗? 这个操作将清空现有数据并让程序重新启动。</string>
    <string name="str_mit_license">本软件遵从 MIT 开源协议</string>
    <string name="str_not_saved">卡片未保存，不能分享</string>
    <string name="str_opensource">开源地址</string>
    <string name="str_dependence">依赖的开源项目</string>
    <string name="str_dep_api">依赖的闭源后端</string>
    <string name="str_os_this_app">制卡器 Android 版</string>
    <string name="str_os_tools_vue">tools-vue (一个使用vue开发的网页版工具包)</string>
    <string name="str_os_xwalk_webview">xwalk webview (开源的 Chromium 内核 WebView)</string>
    <string name="str_os_rarnu_api">rarnu.xyz/api/yugioh (提供卡片数据，AI 注音数据)</string>
</resources>