<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">
        <TextView
                android:id="@+id/tvReinstallTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_reinstall_server"
                android:textStyle="bold"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textSize="18sp"
                tools:ignore="RelativeOverlap,RtlSymmetry"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvReinstallTitle"
                android:textSize="12sp"
                android:ellipsize="end"
                android:paddingStart="8dp"
                android:text="@string/str_reinstall_server_desc"
                tools:ignore="RtlSymmetry,SmallSp"/>
        <Button
                android:id="@+id/btnReinstall"
                android:layout_width="80dp"
                android:layout_height="48dp"
                android:text="@string/str_reinstall"
                android:layout_marginEnd="4dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@android:color/darker_gray"/>
    </RelativeLayout>
    <ScrollView
            android:id="@+id/layAbout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:clickable="true">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/tvAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/str_about_app"
                    android:textStyle="bold"
                    android:paddingStart="8dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textSize="18sp"
                    tools:ignore="RelativeOverlap,RtlSymmetry"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@android:color/darker_gray"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/str_mit_license"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_opensource"
                    android:textStyle="bold"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textSize="16sp"
            />

            <TextView
                    android:id="@+id/tvMyGithub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_os_this_app"
                    android:textColor="@android:color/holo_blue_light"
                    android:paddingStart="24dp"
                    android:paddingEnd="16dp"
                    android:textSize="15sp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
            />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_dependence"
                    android:textStyle="bold"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textSize="16sp"
            />
            <TextView
                    android:id="@+id/tvToolsVue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_os_tools_vue"
                    android:textColor="@android:color/holo_blue_light"
                    android:paddingStart="24dp"
                    android:paddingEnd="16dp"
                    android:textSize="15sp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
            />
            <TextView
                    android:id="@+id/tvXwalkView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_os_xwalk_webview"
                    android:textColor="@android:color/holo_blue_light"
                    android:paddingStart="24dp"
                    android:paddingEnd="16dp"
                    android:textSize="15sp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_dep_api"
                    android:textStyle="bold"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textSize="16sp"
            />
            <TextView
                    android:id="@+id/tvRarnuAPI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_os_rarnu_api"
                    android:textColor="@android:color/holo_blue_light"
                    android:paddingStart="24dp"
                    android:paddingEnd="16dp"
                    android:textSize="15sp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
            />
        </LinearLayout>

    </ScrollView>
</LinearLayout>